--- a/app/src/main/res/layout/activity_changes.xml
+++ b/app/src/main/res/layout/activity_changes.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/changeFr"
-    tools:context=".ui.Changes.ChangesFragment">
+    tools:context=".ChangesActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-           >
+            >
 
             <LinearLayout
                 android:layout_marginTop="20dp"
@@ -165,7 +165,7 @@
                     android:textColorHint="@color/gray" />
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/changeBtn"
+                    android:id="@+id/changedBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -179,5 +179,5 @@
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
