--- a/app/src/main/res/layout/fragment_take_note.xml
+++ b/app/src/main/res/layout/fragment_take_note.xml
@@ -2,202 +2,200 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TakeNoteActivity">
+    tools:context=".TakeNoteActivity"
+    >
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+       >
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-
-        <LinearLayout
-
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0">
-
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/surname"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/surname"
-                android:inputType="text"
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/name"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/name"
-                android:inputType="text"
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/name_of_father"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/name_of_father"
-                android:inputType="text"
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/data"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/data"
-                android:inputType="text"
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/snils"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/snils"
-                android:inputType="number"
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/phone"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/phone"
-                android:inputType="number"
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/polis"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/polis"
-                android:inputType="number"
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/polis_number"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/polis_number"
-                android:inputType="number"
-
-                android:paddingTop="10dp"
-                android:enabled="false"
-                android:textColorHint="@color/gray"
-                android:textColorHighlight="@color/gray"
-                android:textColor="@color/gray"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
-
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="297dp"
-                android:layout_height="38dp"
-                android:layout_gravity="center"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="347dp"
+                android:layout_height="716dp"
                 android:layout_gravity="center"
-                android:text="Выберите удобное время записи "
-                android:textSize="18dp"
-                android:textStyle="bold"
-                app:layout_constraintVertical_bias="0.75" />
-
-
-            <ListView
-                android:id="@+id/listView"
-                android:layout_width="320dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/back"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-                app:layout_constraintVertical_bias="0.7"/>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/openCalendar"
-                android:layout_width="wrap_content"
-                android:layout_height="55dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:paddingTop="10dp"
-                android:text="Выбрать дату записи"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0">
 
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/surname"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="@string/surname"
+                    android:inputType="text"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/registration_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="55dp"
-                android:text="Записаться"
-                android:layout_gravity="center"
-                android:gravity="center"
-                app:layout_constraintTop_toTopOf="parent" />
-        </LinearLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/name"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="@string/name"
+                    android:inputType="text"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/name_of_father"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="@string/name_of_father"
+                    android:inputType="text"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/data"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="@string/data"
+                    android:inputType="text"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/snils"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="@string/snils"
+                    android:inputType="number"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/phone"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="@string/phone"
+                    android:inputType="number"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/polis"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:enabled="false"
+                    android:hint="@string/polis"
+                    android:inputType="number"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/polis_number"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+
+                    android:enabled="false"
+                    android:hint="@string/polis_number"
+                    android:inputType="number"
+                    android:textColor="@color/gray"
+                    android:textColorHighlight="@color/gray"
+                    android:textColorHint="@color/gray" />
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="297dp"
+                    android:layout_height="38dp"
+                    android:layout_gravity="center" />
+
+
+                <ListView
+                    android:id="@+id/listView"
+                    android:layout_width="320dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+                    app:layout_constraintVertical_bias="0.7" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/openCalendar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="-60dp"
+                    android:gravity="center"
+                    android:text="Выбрать дату записи"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/registration_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="Записаться"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
 
 
-  
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
