--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_baseline_history_24"
-        android:title="История" />
+        android:icon="@drawable/note"
+        android:title="Активные записи" />
 
 </menu>
