А теперь все ОК

--- a/app/src/main/res/layout/activity_changes.xml
+++ b/app/src/main/res/layout/activity_changes.xml
@@ -165,6 +165,7 @@
                     android:textColorHint="@color/gray" />
 
                 <com.google.android.material.button.MaterialButton
+                    app:backgroundTint="#3d7894"
                     android:id="@+id/changedBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
