--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="gray">#757575</color>
     <color name="colorForBackEdit">#ededed</color>
     <color name="colorForBackBtn">#a7e7fc</color>
-    <color name="BackColor">#abcfe0</color>
+    <color name="BackColor">#3d7894</color>
 </resources>
