--- a/app/src/main/res/layout/activity_add_shedule.xml
+++ b/app/src/main/res/layout/activity_add_shedule.xml
@@ -35,6 +35,7 @@
             android:id="@+id/time"/>
 
         <com.google.android.material.button.MaterialButton
+            app:backgroundTint="#3d7894"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Send"
