--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -52,7 +52,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.935"
         android:text="Выбрать дату"
-        android:id="@+id/takeDate"/>
+        android:id="@+id/takeDate"
+        app:backgroundTint="#3d7894"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
