--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -42,6 +42,7 @@
             android:background="@color/colorForBackEdit" />
 
         <Button
+            app:backgroundTint="#3d7894"
             android:id="@+id/sendLetter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
