--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="@string/sign_in" />
+            android:text="@string/sign_in"
+            app:backgroundTint="#3d7894"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
