--- a/app/src/main/res/layout/activity_registrait.xml
+++ b/app/src/main/res/layout/activity_registrait.xml
@@ -138,7 +138,8 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/btn"
             android:paddingTop="10dp"
-            android:text="@string/registrait" />
+            android:text="@string/registrait"
+            app:backgroundTint="#3d7894"/>
 
     </LinearLayout>
 
